--- a/problem.tex
+++ b/problem.tex
@@ -1,6 +1,6 @@
 % !TEX root = main.tex
 
-\section{Multi-Agent Reach-Avoid Controller Synthesis}
+\section{Multi-Agent Reach-Avoid Synthesis}
 \label{sec:problem}
 
 \subsection{Problem Statement}
