--- a/experiments.tex
+++ b/experiments.tex
@@ -7,7 +7,7 @@
 	\large
 	\centering
 	\caption{List of runtimes for different case-studies
-		\textmd{Runtimes (in seconds) for computing open-loop controllers over the corresponding product spaces using ALTRO ($T_{AL}$), number of input-state pairs of finite-state abstraction for local ABCD ($N_l$), abstraction and synthesis times for computing local feedback controllers using SCOTS ($T_{l}^{abs}$ and $T_{l}^{syn}$, respectively), number of input-state pairs of finite-state abstraction for global ABCD ($N_g$), abstraction and synthesis times for computing a global controller for the product system using SCOTS ($T_{g}^{abs}$ and $T_{g}^{syn}$, respectively). For local ABCD, the reported numbers correspond to the agent with maximum number of input-state pairs.}
+		\textmd{Runtimes (in seconds) for computing open-loop controllers over the corresponding product spaces using ALTRO ($T_{AL}$), number of input-state pairs of finite-state abstraction for local ABCD ($N_l$), abstraction and synthesis times for computing local feedback controllers using SCOTS ($T_{l}^{abs}$ and $T_{l}^{syn}$, respectively), number of input-state pairs of finite-state abstraction for global ABCD ($N_g$), abstraction and synthesis times for computing a global controller for the product system using SCOTS ($T_{g}^{abs}$ and $T_{g}^{syn}$, respectively). For local ABCD, the reported numbers correspond to the maximum value among all of the agents.}
 		\label{tab:runtimes}
 	}
 
@@ -26,7 +26,7 @@
 			
 			\midrule
 			
-			\multirow{1}{*}{\rotatebox{0}{Crane and forklift}} & $0.65$ & $8.56\times 10^{8}$&$511$  & $91$&$2.16\times10^{18}$&OOM&OOM\\
+			\multirow{1}{*}{\rotatebox{0}{Crane and vehicle}} & $0.65$ & $8.56\times 10^{8}$&$511$  & $91$&$2.16\times10^{18}$&OOM&OOM\\
 			
 			\midrule
 			
@@ -47,16 +47,11 @@ The formal controller synthesis has been performed
 on a cluster with 4 Intel Xeon E7-8857 v2 CPUs (48 cores in total) at 3GHz, with 1.5TB of
 RAM. %\MS{TODO: adding a table with complete information regarding sizes and times for all of the examples}
 
-We consider two distinct types of problems, and demonstrate how they can be solved using our approach. Table~\ref{tab:runtimes} demonstrates  runtimes of different stages for each of the experiment. The reported numbers for local ABCD correspond to the agent with maximum number of input-state pairs. On the other hand, Fig.~\ref{fig:box_plot} illustrates variations of runtimes among different agents for every experiment except the crane and vehicle example for which variation is too large due to different dynamics. This is sensible because feedback controllers for different agents can be computed independently over different machines. Note that using global ABCD, memory requirement exceeds our system's limit (1.5TB of RAM) for all of the experiments. %\MS{For reporting number of input-state pairs and runtimes of local ABCD we could report total, average or maximum values; currently, Tab.~\ref{tab:runtimes} contains maximum values (taken over all of the agents, corresponding to multi-machine implementation), while total and average values are reported in the body of the paper. Data will be unified once the decision is made.}
+We consider two distinct types of problems, and demonstrate how they can be solved using our approach. In all of our examples, robots and obstacles are located over two-dimensional space. Table~\ref{tab:runtimes} demonstrates  runtimes of different stages for each of the experiment. For local ABCD, the reported numbers correspond to the maximum value among all of the agents. This is sensible because feedback controllers for different agents can be computed independently over different machines. Notice that higher number of input-state pairs does not necessarily result in higher runtime for local ABCD as number of transitions and features of the parallel implementation can play a role. Further, Fig.~\ref{fig:box_plot} illustrates variations of runtimes among different agents for every experiment except the crane and vehicle example for which variance is too high because of different dynamics. Note that using global ABCD, memory requirement exceeds our system's limit (1.5TB of RAM) for all of the experiments. %\MS{For reporting number of input-state pairs and runtimes of local ABCD we could report total, average or maximum values; currently, Tab.~\ref{tab:runtimes} contains maximum values (taken over all of the agents, corresponding to multi-machine implementation), while total and average values are reported in the body of the paper. Data will be unified once the decision is made.}
 %Note that while reported numbers for local controller synthesis correspond to the total runtimes over all of the robots, significant reduction would be expected if abstraction and synthesis phases were parallelized.
 %\begin{huge}
 
-\begin{figure}[t]
-	\centering
-	\includegraphics[width=0.45\textwidth]{figures/Box_plot.eps}
-	\caption{Variations of runtimes among agents in diffrenet examples}
-	\label{fig:box_plot}
-\end{figure}
+
 
 \begin{figure*}[t]
     \large
@@ -92,23 +87,26 @@ We consider two distinct types of problems, and demonstrate how they can be solv
 We first consider situations when the robots have got their individual reachability specifications, and they need to ensure a minimum safe distance from each other and the obstacles.
 We show how this case can be captured using the problem description outlined in Sec.~\ref{sec:problem}.
 
-Suppose $\set{\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)}$ is a set of control systems, $\goal^i\subseteq X^i$ is the individual goal states and $\delta \in \mathbb{R}^p_{>0}$ is a safety margin.
+Suppose $\set{\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)}$ is a set of control systems, $\goal^i\subseteq X^i$ is the individual goal states and $\delta \in \mathbb{R}_{>0}$ is a safety margin.
 %(We could also consider obstacles in the agent' own state spaces, in which case we had to additionally introduce safety margins in the state spaces.)
-Suppose the specification requires that each robot $\Sigma^i$ eventually reaches $\goal^i$ while avoiding obstacle $\obs\subseteq Y$ and collision with robots by the margin $\delta$.
+%Without loss of generality, we assume that every robot is moving in the two-dimensional space.
+Suppose the specification requires that each robot $\Sigma^i$ eventually reaches $\goal^i$ while avoiding obstacle $\obs\subseteq \reals^2$ and collision with robots by the margin $\delta$.
 This specification can be expressed as a reach-avoid specification of the product system $\Sigma^\times$, as per the required form given in Sec.~\ref{sec:problem}, as follows:
 \begin{itemize}
 	\item The goal set $\goal\subseteq X^\times$ is defined as $\goal \coloneqq \goal^1\times \ldots \times \goal^N \subseteq X^\times$, and
 	\item The static obstacle $\avoid\subseteq X^\times$ is defined as 
 		\begin{align}
 			&\avoid \coloneqq\nonumber\\ 
-				&\Set{ x\in X^\times | 
+				&\Set{ x^\times\in X^\times | 
 					\begin{array}{c}
-						\exists i\in [1;N]\;.\; D(\proj^i(x),\obs) \leq \delta\\
+						\exists i\in [1;N]\;.\; D(x^i,\obs) \leq \delta\\
 						\vee\\
-						 \exists (i,j)\in [1;N]\times [1;N]\;.\;\\ D\left(\proj^i(x),\proj^j(x)\right)\leq\delta
-					\end{array}}.
+						 \exists (i,j)\in [1;N]\times [1;N]\;.\;\\ d\left(x^i,x^j\right)\leq\delta
+					\end{array}},
 		\end{align}
+	where $x^i$ denotes the component of $x^\times$ corresponding to the $i^{th}$ subsystem, $d(\cdot,\cdot)$ denotes a predicate for measuring the geometric distance between positions of two systems located in two-dimensional space, $D(\cdot,\cdot)$ denotes a predicate for measuring the geometric distance between position of one system and an obstacle located in two-dimensional space.
 \end{itemize}
+
 Once the sets $\goal$ and $\avoid$ are obtained as above, we can use Alg.~\ref{alg:main} to find the set of feedback controllers $\set{C^i}$.
 
 In this category of problems, we consider the following three examples.
@@ -119,11 +117,10 @@ In this example, we consider a planning scenario for ten identical drones ($N=10
 The threshold for minimum distance from the obstacle and other drones is chosen to be $\delta=\begin{bmatrix}0.28&0.28\end{bmatrix}^T$. %and $\delta_{obs}=\begin{bmatrix}2&2\end{bmatrix}^T$.
 The control objective is to synthesize a feedback controller for each drone so that in the presence of (bounded) disturbance, beginning from the specified initial state, the corresponding target state is reached within a finite horizon, while avoiding collision with other drones and the physical obstacle at every time point. 
 
-Every drone is modeled as tuple $\Sigma^i=(X,x_\init^i,U,W,f^d)$. %The set of state variables $X$ consists of $x_1$, $x_2$ and $x_3$ which denote position in $2D$ plane and movement angle, respectively. The set of input variables includes $u_1$ and $u_2$ which represent linear and angular speeds of each robot. 
-%Dynamics for each drone takes the form
-For every drone,
+Every drone is modeled as tuple $\Sigma^i=(X,x_\init^i,U,W,f^d_\tau)$. %The set of state variables $X$ consists of $x_1$, $x_2$ and $x_3$ which denote position in $2D$ plane and movement angle, respectively. The set of input variables includes $u_1$ and $u_2$ which represent linear and angular speeds of each robot. 
+Continuous time dynamics for each drone takes the form
 \begin{equation*}\label{eq:unicycle_ss}
-	f^{d}_{con}(x(t),u(t))=
+	f^{d}(x(t),u(t))=
 	\begin{bmatrix}
 		\dot{x_1}\\
 		\dot{x_2}\\
@@ -135,7 +132,7 @@ For every drone,
 		u_2
 	\end{bmatrix}.
 \end{equation*}
-where $x_1$, $x_2$ denote the drone's position in $2D$ plane, $x_3$ denotes the rotational angle, $u_1$ and $u_2$ represent linear and angular speeds of each drone, respectively. Choosing a sampling time $\tau=0.1$, we can use Eq.~\eqref{eq:cont_to_disc} to derive nominal dynamics for the drones ($f^d$). %Further, the output mapping is defined as
+where $x_1$ and $x_2$ denote the drone's position in two-dimensional space, $x_3$ denotes the rotational angle, and $u_1$ and $u_2$ represent control inputs for each drone. Choosing a sampling time $\tau=0.1$, nominal dynamics $f^d_\tau$ can be characterized uniquely. %Further, the output mapping is defined as
 %\[
 %h^d(x(t))=\begin{bmatrix}
 %	x_1\\x_2
@@ -145,6 +142,12 @@ where $x_1$, $x_2$ denote the drone's position in $2D$ plane, $x_3$ denotes the 
 
 
 %According to our proposed scheme, we first use ALTRO to design a centralized nominal controller for the product state and input space that satisfies the specification in Equation~\eqref{eq:spec} in the absence of disturbance ($W=\{0\}$). 
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.45\textwidth]{figures/Box_plot.eps}
+	\caption{Variations of runtimes among different agents for different experiments using local ABCD}
+	\label{fig:box_plot}
+\end{figure}
 Selecting the horizon length as $T=102$, %and sampling time $\tau=0.1$. 
 ALTRO computes a valid open-loop trajectory %$x_{nom}$
 in $125$ seconds for the product system with $30$ state and $20$ input variables.  %Next, we show how to synthesize local feedback controllers that guarantee satisfaction of specifications in the presence of disturbance. %hereeeThe open-loop trajectories generated by ALTRO ($\set{(x_{0_\nom}^i,\ldots,x_{K_\nom}^i)}_{i\in [1;N]}$) are depicted in solid in Figure~\ref{fig:MA}. Note that the guarantee that open-loop controller gives is only valid in the absence of disturbance. In Figure~\ref{fig:MA}, dotted trajectories correspond to the first and the second robot's paths in $2D$ plane when constant additive disturbance $w=\{\begin{bmatrix}0.03,0.03,0.03\end{bmatrix}\}$ is being applied throughout the whole horizon. It can be noticed that they collide with each other before reaching their corresponding target sets. Next, we show how to synthesize local controllers that guarantee satisfaction of specifications in the presence of disturbance. \MS{1) Use dashed/dotted for trajectories with added disturbance. 2) use $x_1$ and $x_2$ instead of $x$ and $y$ for different axes 3) don't draw the outer circle.}
@@ -155,7 +158,8 @@ in $125$ seconds for the product system with $30$ state and $20$ input variables
 %Note that $\delta_{col} > \varepsilon$.
  %We use SCOTS in order to synthesize (local) feedback controllers that guarantee reachability and obstacle/collision avoidance in the presence of bounded disturbance such that 
  
- To implement step~\ref{step:tracking} of Alg.~\ref{alg:main}, we need to design local feedback controllers that can keep the agent's trajectories inside $\varepsilon$-balls defined around the nominal trajectories computed by ALTRO. Fig.~\ref{fig:3dtubes} gives time-space illustration for the safe tubes around the nominal trajectories. We want to robustify the nominal controller against disturbances with $|W|\leq \begin{bmatrix}0&0.025&0.025\end{bmatrix}^T$. We consider state and input spaces to be $X=[-1,11]^2\times[-2,3.3]$ and
+ %To implement step~\ref{step:tracking} of Alg.~\ref{alg:main}, we need to design local feedback controllers that can keep the agent's trajectories inside $\varepsilon$-balls defined around the nominal trajectories computed by ALTRO. 
+ Fig.~\ref{fig:3dtubes} gives time-space illustration for the safe tubes around the nominal trajectories. We want to robustify the nominal controller against disturbances with $|W|\leq \begin{bmatrix}0&0.025&0.025\end{bmatrix}^T$. We consider state and input spaces to be $X=[-1,11]^2\times[-2,3.3]$ and
 $U=[-2.4,2.4]^2$, respectively. Choosing  $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$, $\eta_{U}=\begin{bmatrix}0.3&0.3\end{bmatrix}^T$ and $\varepsilon=\begin{bmatrix}0.16&0.16&0.18\end{bmatrix}^T$, Tab.~\ref{tab:runtimes} illustrates list of runtimes and number of input-state pairs corresponding to local and global ABCD. Noticeably, for number of agents $N>1$, memory requirement for global ABCD exceeds our limits (1.5TB of RAM). 
 %results in $\hat X$ and $\hat U$ with $9.61\times 10^7$ and $289$ points. We compute the transition system over the inter-tube space characterized by $\varepsilon=\begin{bmatrix}0.16&0.16&0.18\end{bmatrix}^T$, which results in finite-state transition system with $4.0\times 10^5$ points. Given the above settings, SCOTS computes abstraction in $340$ seconds ($34.0$ seconds in average) and synthesis in $73$ seconds ($7.3$ seconds in average). %(the ones with red dashed circles around them in Fig~\ref{fig:MA}). 
 %It can be noticed that success in restricting the trajectories generated under the worst-case disturbance within the tubes guarantees a collision-free mission.
@@ -163,7 +167,7 @@ $U=[-2.4,2.4]^2$, respectively. Choosing  $\eta_{X}=\begin{bmatrix}0.02&0.02&0.0
 
 
 On the other hand, using ALTRO alone would not provide guarantee against bounded disturbance.  %By allowing disturbance to take non-zero values, there is no guarantee that the open-loop trajectories are followed.
-Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and feedback controllers on regulating distance between the two of drones with and without disturbance. As expected, in the absence of disturbance open-loop controller suffices and distance between the two drones (shown in solid blue) does not go below the defined threshold. Next, we consider the case when constant additive disturbance vectors $\begin{bmatrix}0 &0.025&0.025\end{bmatrix}^T$ and $\begin{bmatrix}0 &-0.025&-0.025\end{bmatrix}^T$ are being applied to the first and second drones throughout the whole horizon. It can be noticed that applying the open-loop controller causes that distance between the two drones (shown in solid green) goes blow the predefined threshold. However, the feedback controller is still capable of maintaining distance (shown in solid red) within the safe region.
+Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and feedback controllers on regulating distance between the two of drones with and without disturbance. As expected, in the absence of disturbance open-loop controller suffices and distance between the two drones (shown in solid blue) does not go below the defined threshold. Next, we consider the case when constant additive disturbance vectors $\begin{bmatrix}0 &0.025&0.025\end{bmatrix}^T$ and $\begin{bmatrix}0 &-0.025&-0.025\end{bmatrix}^T$ are being applied to the two drones throughout the whole horizon. It can be noticed that applying the open-loop controller causes that distance between the two drones (shown in solid green) to go blow the predefined threshold. However, the feedback controller is capable of maintaining distance (shown in solid red) within the safe region when the same disturbance is being applied.
 
 
 %In this example, we are focusing on number of robots. This example consist of 10 identical unicycle model. Each unicycle should start from its own initial point and reach target set which is shown in Fig. \ref{fig:MA} with green points and red points. while it avoids obstacles and collision with other agents. Unicycle model is described in below.
@@ -209,7 +213,7 @@ Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and fee
 \subsubsection{Crane and Vehicle}
 \label{subsec}
 The goal of this example is to study performance of our method for controlling a number of robots with different dynamics. %Consider a production line wherein a crane (modeled as a cart-pole system) puts some items at certain points and a forklift is in charge of picking these items up. It is assumed that at its lowest height the crane's hook is positioned such that the forklift cannot pass. In particular, Fig.~\ref{fig:cr_and_lft_2} shows a scenario wherein the crane (initially positioned toward left of the boom) needs to unload at the other end of the boom. At the same time, the forklift (initially positioned near the right end of the boom) needs to pick some item locating near the left end of the boom. The goal is to control both the crane and the forklift so that the forklift reaches the object without colliding with the crane. 
-We model the crane and vehicle by tuples $\Sigma^1=(X^1,x_\init^1,U^1,W^1,f^c)$ and $\Sigma^2=(X^2,x_\init^2,U^2,W^2,f^l)$, respectively. The crane is modeled as cart-pole system taking the form \cite{Barto1983}:
+We model the crane and vehicle by tuples $\Sigma^1=(X^1,x_\init^1,U^1,W^1,f_\tau^c)$ and $\Sigma^2=(X^2,x_\init^2,U^2,W^2,f_\tau^l)$, respectively. The crane is modeled as cart-pole system taking the form \cite{Barto1983}:
 \begin{align*}
 	\ddot{\theta} &= \frac{M_tg\sin(\theta) - \cos(\theta)(F + M_pl \dot{\theta}^2 \sin(\theta))}{l(4/3 M_t- M_p \cos^2(\theta))}=f^c_1(\theta,\dot{\theta},F)\\
 	\ddot{z}&= \frac{F + M_pl \dot{\theta}^2 \sin(\theta)-M_pl \ddot{\theta} \cos(\theta)}{M_t}=f^c_2(\theta,\dot{\theta},F),
@@ -222,9 +226,9 @@ where
 	\item[] $M_t=M_c+M_p$ denotes the total mass,
 	\item[] $l=0.5$ m is the half-pole length.
 \end{itemize}
-Further, cart's position, pole's angle and input force to the cart are denoted by $x_1^{(1)}=z$, $x_3^{(1)}=\theta$ and $u^{(1)}=F$, respectively. Continuous-time model of the crane is of the following form:
+Further, cart's position, pole's angle and input force to the cart are denoted by $x_1^{(1)}=z$, $x_3^{(1)}=\theta$ and $u^{(1)}=F$, respectively. Continuous-time dynamics of the crane is of the following form:
  %for which the set of state variables $X^1$ consists of $x_1^{(1)}$, $x_2^{(1)}$, $x_3^{(1)}$ and $x_4^{(1)}$ denoting (linear) position and speed of the cart and (angular) position and speed of the pole, respectively. The set of input variables includes $u_1^{(1)}$ which represents linear acceleration of the cart. Finally, crane's dynamics takes the form for an inverted pendulum (see, e.g., \cite{barto1983neuronlike}) and can be written as
-\[f^{c}_{con}(x^{(1)}(t),u^{(1)}(t))=\begin{bmatrix}
+\[f^{c}(x^{(1)}(t),u^{(1)}(t))=\begin{bmatrix}
 	\dot{x}_1^{(1)}\\
 	\dot{x}_2^{(1)}\\
 	\dot{x}_3^{(1)}\\
@@ -254,11 +258,11 @@ Further, cart's position, pole's angle and input force to the cart are denoted b
 %\end{bmatrix},
 %\]
 %where, $y_1>0$ is a constant that denotes the cart's height from the ground.
-The vehicle can be modelled as
+The vehicle's continuous-time dynamics takes the form of
 \[f^{l}_{con}(x^{(2)}(t),u^{(2)}(t))=\begin{bmatrix}
 \dot{x}_1^{(2)}\\ \dot{x}^{(2)}_2 \end{bmatrix}=\begin{bmatrix} x^{(2)}_2\\ u^{(2)} \end{bmatrix},
 \]
-where $x_1^{(2)}$ and $x_2^{(2)}$ denote the vehicle's position and speed and $u^{(2)}$ represents the vehicle's control input (acceleration). Fixing the sampling time $\tau=0.1$, one can use Eq.~\eqref{eq:cont_to_disc} to derive $f^c$ and $f^l$. The output mapping for the crane is defined as
+where $x_1^{(2)}$ and $x_2^{(2)}$ denote the vehicle's position and speed and $u^{(2)}$ represents the vehicle's control input (acceleration). Fixing the sampling time $\tau=0.1$, one can derive $f^c_\tau$ and $f^l_\tau$. %The output mapping for the crane is defined as
 %\[
 %h^l=\begin{bmatrix}
 %	x_1^{(2)}\\
@@ -277,7 +281,7 @@ We choose state and input spaces for the crane to be $X^{1}=[-0.195,5.49]\times[
 We choose state and input partition sizes $\eta_{{X}}^{1}=\begin{bmatrix}0.015&0.035&0.016&0.064\end{bmatrix}^T$, $\eta_{U}^1=0.2$,  $\eta_{{X}}^2=\begin{bmatrix}0.01&0.015\end{bmatrix}^T$ and $\eta_{U}^2=0.1$. %These selections yield discretized models with state and input spaces having $2.5\times 10^9$ and $71$ points for the crane, and $2\times 10^5$ and $61$ points for the vehicle. 
 Next, we limit both of the state spaces into tubes constructed around the open-loop trajectories with sizes specified as $\varepsilon^{1}=\begin{bmatrix}0.135&0.385&0.176 &0.768\end{bmatrix}^T$ and $\varepsilon^{2}=\begin{bmatrix}0.08&0.12\end{bmatrix}$. %This reduces size of state spaces into $1.2\times 10^7$ and $1.5\times 10^4$ for the crane and vehicle, respectively. 
 %Given the above settings, SCOTS was able to compute abstraction in $511$ and $0.22$ seconds for the crane and the vehicle, respectively. Scots performs synthesis in $91$ and $0.037$ seconds for the crane and the vehicle, respectively.
-Tab.~\ref{tab:runtimes} illustrates list of runtimes and number of input-state pairs corresponding to local and global ABCD. Noticeably, forcart-pole model, memory requirement for global ABCD exceeds our limits (1.5TB of RAM). On the other hand, using ALTRO alone would not provide guarantee against bounded disturbance (Fig~\ref{fig:cr_and_lft}). 
+Tab.~\ref{tab:runtimes} illustrates list of runtimes and number of input-state pairs corresponding to local and global ABCD. Noticeably, for the cart-pole model, memory requirement for global ABCD exceeds our limits (1.5TB of RAM). On the other hand, using ALTRO alone would not provide guarantee against bounded disturbance (Fig~\ref{fig:cr_and_lft}, \textbf{right}). 
 
 			
 %\begin{figure}[t]
@@ -340,7 +344,7 @@ Finally, we study a lane merging problem wherein multiple controlled vehicles ar
 %\[
 %h^v(x(t))=x(t).
 %\]
-The model for each of the vehicles is the same as the drone model given in Sec.~\ref{sec:Multirobot} ($\Sigma^i=(X,x_\init^i,U,W,f^d)$). For collision and obstacle avoidance, we choose $\delta=\begin{bmatrix}0.37&0.37\end{bmatrix}^T$. The horizon length is fixed to $T=110$. Given these settings, ALTRO generates a valid nominal trajectory in $100$ seconds. Next, we use SCOTS in order to compute a feedback controller tolerating additive disturbance $|W|\leq\begin{bmatrix}0.03&0.03&0.03\end{bmatrix}^T$. We choose state and input spaces for each vehicle's model to be $X=[-0.5,15]\times[0.1,7.4]\times[-1,0.4]$ and $U=[-0.9,3]\times[-2.1,2.1]$, respectively. State and input partition sizes are chosen as $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$ and $\eta_{U}=\begin{bmatrix}0.3&0.15\end{bmatrix}^T$. %These selections yield discretized models with abstract state and input spaces having $2.1\times 10^7$ and $406$ points. 
+The model for each of the vehicles is the same as the drone model given in Sec.~\ref{sec:Multirobot} ($\Sigma^i=(X,x_\init^i,U,W,f^d_\tau)$). For collision and obstacle avoidance, we choose $\delta=\begin{bmatrix}0.37&0.37\end{bmatrix}^T$. The horizon length is fixed to $T=110$. Given these settings, ALTRO generates a valid nominal trajectory in $100$ seconds. Next, we use SCOTS in order to compute feedback controllers tolerating additive disturbance $|W|\leq\begin{bmatrix}0.03&0.03&0.03\end{bmatrix}^T$. We choose state and input spaces for each vehicle's model to be $X=[-0.5,15]\times[0.1,7.4]\times[-1,0.4]$ and $U=[-0.9,3]\times[-2.1,2.1]$, respectively. State and input partition sizes are chosen as $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$ and $\eta_{U}=\begin{bmatrix}0.3&0.15\end{bmatrix}^T$. %These selections yield discretized models with abstract state and input spaces having $2.1\times 10^7$ and $406$ points. 
 Next, we limit the state spaces into tubes constructed around the open-loop trajectories with sizes specified as $\varepsilon=\begin{bmatrix}0.16&0.16&0.16\end{bmatrix}^T$. %This reduces size of state space into $1.9\times 10^5$ (in average). Given the above settings, SCOTS was able to compute abstraction in $159.6$ seconds ($26.6$ seconds in average) and synthesize controllers in $40.8$ seconds ($6.8$ seconds in average).
 Tab.~\ref{tab:runtimes} illustrates list of runtimes and number of input-state pairs corresponding to local and global ABCD. Noticeably, for number of agents $N>1$, memory requirement for global ABCD exceeds our limits (1.5TB of RAM). Fig.~\ref{fig:merge} demonstrates snapshots of one sample trajectory when feedback controllers are employed under the presence of disturbance. It should be noticed that using ALTRO alone would not provide guarantee against bounded disturbance.
 Fig.~\ref{fig:multi_drone_distance} illustrates the fact that open-loop controller fails in keeping one of the vehicles away from the road's sides under perturbed situation when constant additive disturbance vector $\begin{bmatrix}-0.03 &0.03&-0.03\end{bmatrix}^T$ is being applied throughout the whole horizon. In contrast, emplying feedback controller results in successful lane merging. %Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and feedback controllers on regulating distance between of the vehicles from the road's sides with and without disturbance. In the absence of disturbance open-loop controller is capable of maintaing a minimum distance from the road's sides. Next, we consider the case when constant additive disturbance vector $\begin{bmatrix}-0.03 &0.03&-0.03\end{bmatrix}^T$ is being applied to the vehicle throughout the whole horizon. It can be noticed that applying the open-loop controller causes that distance from the road's side (shown in solid red) becomes smaller than $\delta$. However, the feedback controller is still capable of maintaining distance above the given threshold (shown in solid green).
@@ -356,9 +360,9 @@ Fig.~\ref{fig:multi_drone_distance} illustrates the fact that open-loop controll
 
 
 
-\begin{figure}
+\begin{figure}[t]
 	\centering
-	\includegraphics[width=0.45\textwidth,height=0.4\textheight]{figures/merge.pdf}
+	\includegraphics[scale=.2]{figures/merge.pdf}
 	\caption{Illustration of a (sample) trajectory generated by formally guaranteed feedback controllers for the lane merging example}
 	\label{fig:merge}
 \end{figure}
@@ -366,7 +370,7 @@ Fig.~\ref{fig:multi_drone_distance} illustrates the fact that open-loop controll
 \begin{figure}[t]
 	\centering
 	\includegraphics[width=0.45\textwidth]{figures/dist_merging.pdf}
-	\caption{Performance of open-loop and feedback controllers in regulating distance between drones for disturbance-free and perturbed situations for the lane merging example}
+	\caption{Performance of open-loop and feedback controllers in regulating distance between one vehicle and the road side for disturbance-free and perturbed situations for the lane merging example}
 	\label{fig:merging_distance}
 \end{figure}
 
@@ -379,13 +383,13 @@ We show how the formation control problem can be expressed using a static obstac
 Let us first formalize the notion of formation.
 Let $\Set{\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)}$ be a set of robots.
 A \emph{formation constraint} is a set $\Set{\lambda^{i,j}\in \mathbb{R}}_{i,j\in [1;N]}$ where every $\lambda^{i,j}$ specifies the relative \emph{euclidean} distance between the projections of state of robot $\Sigma^i$ and robot $\Sigma^j$ over the shared output space $Y$.
-(We use euclidean distance to define formation, as opposed to the distance $D$ used in the rest of the paper, to allow rotation of the formation while moving.)
+%(We use euclidean distance to define formation, as opposed to the distance $D$ used in the rest of the paper, to allow rotation of the formation while moving.)
 
-Now suppose $\goal^i\subseteq X^i$ is the individual goal states, $\obs\subseteq Y$ is a common obstacle in the output space, $\delta \in \mathbb{R}^p_{>0}$ is a safety margin, and $\mu\in \mathbb{R}^p_{>0}$ is a tolerance margin for the formation constraint.
+Now suppose $\goal^i\subseteq X^i$ is the individual goal states, $\obs\subset \reals^2$ is a common obstacle in the output space, $\delta \in \mathbb{R}^2_{>0}$ is a safety margin, and $\mu\in \mathbb{R}_{>0}$ is a tolerance margin for the formation constraint.
 The formation control problem then asks to generate controllers $\set{C_i}$ such that every robot $\Sigma^i$ eventually reaches $\goal^i$ while avoiding $\obs$ by the margin $\delta$, as well as while making sure that the \emph{euclidean} distance between robot $\Sigma^i$ and $\Sigma^j$ is in the range $\lambda^{i,j} \pm \mu$.
 Essentially the tolerance margin $\mu$ is to account for the possible slight deviations due to disturbances experienced by the robots. Notice that since the robots have their own goals, and at the same time they need to ``stay close'' to their neighboring robots in the formation for the entire period, hence they might first need to accompany the other robots to their goals, before being accompanied by them to reach its own goal.
 
-Let $D_e\colon \mathbb{R}^n\times \mathbb{R}^n\to \mathbb{R}^p_{\geq0}$ denote the euclidean distance.
+%Let $D_e\colon \mathbb{R}^n\times \mathbb{R}^n\to \mathbb{R}^p_{\geq0}$ denote the euclidean distance.
 
 We can express the formation control problem in the product state space as follows:
 \begin{itemize}
@@ -393,11 +397,11 @@ We can express the formation control problem in the product state space as follo
 	\item The static obstacle $\avoid\subseteq X^\times$ is defined as 
 		\begin{align}
 			&\avoid \coloneqq\nonumber\\ 
-			&\Set{ x\in X^\times | 
+			&\Set{ x^\times\in X^\times | 
 				\begin{array}{c}
-					\exists i\in [1;N]\;.\; D(\proj^i(x),\obs) \leq \delta\\
+					\exists i\in [1;N]\;.\; D(x^i,\obs) \leq \delta\\
 					\vee\\
-					\exists (i,j)\in [1;N]\times [1;N]\;.\;\\ D_e\left(\proj^i(x),\proj^j(x)\right)\notin\lambda^{i,j}\pm \mu
+					\exists (i,j)\in [1;N]\times [1;N]\;.\;\\ d\left(x^i,x^j\right)\notin\lambda^{i,j}\pm \mu
 			\end{array}},					
 		\end{align}
 \end{itemize}
