adding missing references

--- a/intro.tex
+++ b/intro.tex
@@ -77,7 +77,7 @@ In that case, there is an outer loop that searches through the parameter space.
 
 
 We have implemented our technique based on two ingredients: the ALTRO open loop trajectory planner \cite{howell2019altro} and the 
-SCOTS correct-by-construction controller synthesis tool \cite{SCOTS}. 
+SCOTS correct-by-construction controller synthesis tool \cite{Rungger2016scots}. 
 ALTRO is a state-of-the-art trajectory planning tool absed on optimal control.
 It handles nonlinear dynamics and scales to large dimensions, but ignores disturbances or modeling uncertainties.
 SCOTS implements a highly parallelizable \emph{abstraction-based controller synthesis} algorithm that generates a provably
