--- a/references.bib
+++ b/references.bib
@@ -73,6 +73,15 @@
   publisher={MIT press}
 }
 
+@INPROCEEDINGS{desai2017drona,
+	author={A. {Desai} and I. {Saha} and J. {Yang} and S. {Qadeer} and S. A. {Seshia}},
+	booktitle={2017 ACM/IEEE 8th International Conference on Cyber-Physical Systems (ICCPS)}, 
+	title={DRONA: A Framework for Safe Distributed Mobile Robotics}, 
+	year={2017},
+	volume={},
+	number={},
+	pages={239-248}}
+
 @inproceedings{fan2020fast,
   title={Fast and Guaranteed Safe Controller Synthesis for Nonlinear Vehicle Models},
   author={Fan, Chuchu and Miller, Kristina and Mitra, Sayan},
@@ -151,6 +160,18 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{Gavran2017antlab,
+	year = {2017},
+	month = oct,
+	publisher = {Association for Computing Machinery ({ACM})},
+	volume = {16},
+	number = {5s},
+	pages = {1--19},
+	author = {Ivan Gavran and Rupak Majumdar and Indranil Saha},
+	title = {Antlab},
+	journal = {{ACM} Transactions on Embedded Computing Systems}
+}
+
 @article{Kavraki1996rrt,
 	year = {1996},
 	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
@@ -171,6 +192,40 @@
 	pages     = {252--257},
 	publisher = {{ACM}},
 	year      = {2019}
+}
+
+@book{LaValle2006,
+	year = {2006},
+	publisher = {Cambridge University Press},
+	author = {Steven M. LaValle},
+	title = {Planning Algorithms}
+}
+@article{LaValle1998planning,
+	year = {1998},
+	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+	volume = {14},
+	number = {6},
+	pages = {912--925},
+	author = {S.M. LaValle and S.A. Hutchinson},
+	title = {Optimal motion planning for multiple robots having independent goals},
+	journal = {{IEEE} Transactions on Robotics and Automation}
+}
+
+@book{Yang1997IntelligentP,
+	title={Intelligent planning - a decomposition and abstraction based approach},
+	author={Qiang Yang},
+	booktitle={Artificial intelligence},
+	year={1997}
+	publisher={Springer Berlin Heidelberg}
+}
+
+@book{russel2010AIplanning,
+	author    = {Stuart J. Russell and
+	Peter Norvig},
+	title     = {Artificial Intelligence - {A} Modern Approach, Third International
+	Edition},
+	publisher = {Pearson Education},
+	year      = {2010}
 }
 
 
