--- a/related_work.tex
+++ b/related_work.tex
@@ -2,7 +2,7 @@
 \noindent\textbf{Related Work}
 %
 The field of multi-agent planning is too large for a comprehensive survey; we point to very good text books
-\cite{LaValle,Kavraki,AIPlanning} for an introduction.
+\cite{LaValle2006,LaValle1998planning,choset2005principles,russel2010AIplanning} for an introduction.
 We categorize closely related work into (1) ones combining planning and tracking controller synthesis, 
 (2) ones addressing multi-agent formal controller synthesis, and 
 (3) approaches combining (1) and (2).
@@ -39,7 +39,7 @@ There are methods which do not consider external disturbances and do not provide
 % to external disturbances, and lacking any form of communications. 
 
 There are other works that use a pre-defined motion primitive library to perform planning for multi-robot 
-systems \cite{saha2016implan,BanusicMPSZ19pgcd,Antlab,Drona}. 
+systems \cite{saha2016implan,BanusicMPSZ19pgcd,Gavran2017antlab,desai2017drona}. 
 In contrast, our method directly deals with the dynamical model. 
 The closest related work that match our level of generality is the one by Bansal et al.\ \cite{bansal2017safe}.
 However, they assume that each robot has its own reach-avoid specification and they only need to avoid collision with the other robots.
